# BP_DZ10_Task5_BezzabotnovDV

./: .gitignore  BP_DZ10_Task5_BezzabotnovDV.cpp  BP_DZ10_Task5_BezzabotnovDV.h  CMakeLists.txt
Figure/: EquilateralTriangle.h  Figure.cpp  Figure.h  Figure.sln  Figure.vcxproj  Figure.vcxproj.filters  IsoscelesTriangle.h  Parallelogram.h  Quadrate.h  Rectangle.h  Rhombus.h  RightTriangle.h  Square.h  Triangle.h
